# replicated-splinterdb

./: CMakeLists.txt  Makefile  README.md  setup.sh  setup_server.sh
apps/: CMakeLists.txt  client.cpp  grpc_client.cpp  grpc_server.cpp  main.cpp  spl_client.cpp  spl_server.cpp  splinterdb.cpp
include/: timer.h
include/client/: client.h  read_policy.h
include/replicated-splinterdb/client/: client.h  read_policy.h
include/replicated-splinterdb/common/: types.h
include/replicated-splinterdb/server/: replica.h  replica_config.h  server.h  splinterdb_operation.h
include/server/: replica.h
protos/: CMakeLists.txt  helloworld.proto  kvstore.proto
src/: CMakeLists.txt  owned_slice.cpp  owned_slice.h  replica.cpp  replica.h  replica_config.h  splinterdb_operation.cpp  splinterdb_operation.h
src/client/: CMakeLists.txt  MurmurHash3.cpp  client.cpp  read_policy.cpp
src/common/: types.cpp
src/logging/: logger.cpp  logger.h  logger_wrapper.hxx
src/server/: CMakeLists.txt  call_data.cpp  call_data.h  in_memory_log_store.cpp  logger.cpp  logger.h  owned_slice.cpp  replica.cpp  server.cpp  splinterdb_log_store.cpp  splinterdb_log_store.h  splinterdb_operation.cpp  splinterdb_state_machine.cpp  splinterdb_state_machine.h
